<resources>
    <string name="app_name">HeadsApp</string>
    <string name="menu_stars">Звезды</string>
    <string name="game_do">Поднесите к голове</string>
    <string name="level_stars">Звезды</string>
    <string name="level_animals">Животные</string>
    <string name="play">Играть!</string>
    <string name="back">Вернуться в меню</string>
    <string name="choose_level">Выберите категорию</string>
    <string name="youtube">Посмотреть видео на youtube</string>
    <string name="rools_title">Как играть?</string>
    <string name="for_youtube">Видео с американского шоу, поэтому вы можете просто прочитать правила ниже</string>
    <string name="rools_description">Сначала выбирается ведущий, который будет угадывать, кого остальные игроки ему показывают. После выбирается категория, из которой будут браться слова. Ведущий ставит телефон у себя на головой экраном к другим игрокам. Игроки могут либо показывать без слов, либо рассказывать, не говоря главного слова.</string>
</resources>
